# gl_deep_search

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  CIRCULAR_IMPORT_ANALYSIS.md  ETL_ORCHESTRATION_REQUIREMENTS.md  PROJECT_STATUS.md  README.md  SUPABASE_MANIFEST_PLAN.md  audit_orchestration_models.md  audit_processing_pipeline.md  audit_scrapers_downloaders.md  audit_service_storage.md  audit_summary.md  docker-compose.yml  pyproject.toml  setup.sh  test_fixes_summary.md  test_strategy_rework_review.md
.cursor/rules/: python-best-practices.mdc  testing-code.mdc
.github/workflows/: etl-weekly.yml  python-checks.yml
backend/: __init__.py
backend/etl/: .env.example  TEXT_CHUNKING_REQUIREMENTS.md  __init__.py  __main__.py  config.dev.yaml  config.production.yaml  config.yaml  orchestrator.py
backend/etl/data/raw/: 0_intro.txt  10_growth_diagnostics_questions.txt  11_growth_diagnostics_testing_finance.txt  12_human_capital.txt  13_labor_markets.txt  14_inequality_inclussion.txt  15_bop_imbalances_pt_one.txt  16_bop_imbalances_pt_two.txt  17_volatility.txt  18_fiscal_policy.txt  19_budget_institutions.txt  1_malthusian_economics.txt  20_diagnosting_fiscal_policy.txt  21_diagnostics_therapeutics.txt  22_sense_us.txt  24_policymaker_worlds_view.txt  2_growth_theories.txt  3_econ_complexity.txt  4_econ_complexity_product_space_diversification.txt  5_technological_diffusion.txt  6_green growth_framework.txt  7_growth_cities.txt  8_remoteness.txt  9_principles_differential_diagnosis.txt
backend/etl/experiments/ocr_pipeline/: README.md  module_docling.py  module_easyocr.py  module_llamaparse.py  module_marker.py  module_mistral.py  module_tesseract.py  module_unstructured.py  ocr.ipynb  ocr_eval.py  ocr_pipeline.py  parsers.py  pdf_module.py  pdf_modules.py  pdf_ocr_module.py  pdf_parsing.py  preflight_pdf.py  process_preset_batch.sh  process_single_pdf.py  run_download_sample.py  run_gl_directory_preprocessing.py  run_integrated_pipeline.py  run_ocr.py  run_parser.py  run_pdf_to_text.py  run_singlepdf_ocr.py  submit_pdf_jobs.sh  tesser.py  tesseract_path.py  test_marker.py  unstructured.ipynb  unstructured_baseline.txt
backend/etl/models/: __init__.py  pdf_ocr_module.py  publications.py  tracking.py
backend/etl/scrapers/: MANIFEST_SCHEMA_README.md  README.md  growthlab.py  openalex.py
backend/etl/scrapers/development_kd/: growthlab_reference.py
backend/etl/scripts/: benchmark_pdf_backends.py  check_dummy_db.py  create_dummy_db.py  reset_publication_status.py  run_document_tagger.py  run_embeddings_direct.py  run_embeddings_generator.py  run_file_downloader.py  run_gl_file_downloader.py  run_growthlab_scraper.py  run_lecture_transcripts.py  run_openalex_file_downloader.py  run_openalex_scraper.py  run_pdf_processor.py  run_singlepdf_ocr.py  run_text_chunker.py  test_download_tracking.py  test_publication_tracking.py  test_publication_update_detection.py  test_query_publications.py
backend/etl/storage/: database.py
backend/etl/tests/: test_publication_tracker.py
backend/etl/utils/: README.md  README_publication_tracking.md  __init__.py  document_tagger.py  embed_text.py  embeddings_generator.py  file_downloader.py  gl_file_downloader.py  gpu_memory.py  oa_file_downloader.py  pdf_processor.py  profiling.py  publication_tracker.py  retry.py  test_embedding_pipeline.py  text_chunker.py  upload_data_qdrant.py
backend/etl/utils/pdf_backends/: __init__.py  base.py  device.py  docling_backend.py  marker_backend.py  unstructured_backend.py
backend/etl_monitor_frontend/: README.md  export_publication_status.py
backend/service/: README.md  __init__.py  agent.py  config.py  database.py  embedding_service.py  main.py  models.py  qdrant_service.py  routes.py
backend/service/scripts/: ingest_to_qdrant.py
backend/storage/: __init__.py  base.py  cloud.py  database.py  etl_metadata_schema.sql  factory.py  gcs.py  local.py
backend/storage/adapters/: __init__.py  base.py  factory.py  supabase_adapter.py
backend/storage/data/: etl_tracking.db
backend/storage/supabase_migrations/: 001_initial_schema.sql
backend/tests/: conftest.py  test_environment.py
backend/tests/etl/: conftest.py  test_embeddings_generator.py  test_etl_pipeline_integration.py  test_file_downloader.py  test_gl_file_downloader.py  test_growthlab.py  test_lecture_transcripts.py  test_oa_file_downloader.py  test_oa_file_downloader_summary.md  test_openalex.py  test_orchestrator.py  test_pdf_backends.py  test_pdf_backends_integration.py  test_pdf_processor.py  test_publication_tracking.py  test_publication_tracking_real.py  test_retry.py  test_text_chunker.py
backend/tests/service/: README.md  __init__.py  test_agent.py  test_embedding_service.py  test_ingest_to_qdrant.py  test_main.py  test_publication_endpoints.py  test_storage.py
deployment/: DEPLOYMENT_STATUS.md  README.md  TEST_RESULTS.md  TEST_RESULTS_PHASE1.md  TEST_RESULTS_PHASE2.md  cloudbuild-slurm.yaml  cloudbuild.yaml
deployment/cloud-run/: .dockerignore  Dockerfile  build.sh  deploy.sh  entrypoint.sh  execute.sh  schedule.sh  test-container-local.sh
deployment/config/: gcp-config.sh.template  lifecycle-policy.json
deployment/pdf-processing/: Dockerfile
deployment/scripts/: 01-setup-gcp-project.sh  02-setup-storage.sh  03-setup-secrets.sh  04-create-service-account.sh  05-setup-cost-monitoring.sh  calculate-costs.sh  migrate-to-gcs.sh  utils.sh
deployment/slurm/: README.md  benchmark.sbatch  etl_pipeline.sbatch  pdf_processing.sbatch  setup_env.sh
deployment/vm/: cleanup-vms.sh  create-vm.sh  incremental-update.sh  monitor-vm.sh  startup-script.sh  test_batch_processing.py
docs/: GCP_DEPLOYMENT_GUIDE.md  fasrc_general_tips.md  integration_test_issues_strategy.md
docs/decisions/: 001-self-hosted-pdf-parsing.md
frontend/: api_client.py  app.py
frontend/.streamlit/: config.toml
notebooks/: gl_scraper_improvements.ipynb
scripts/: setup.sh
